test/files/neg/volatile_no_override.check
volatile_no_override.scala:13: error: overriding value x in class A of type Volatile.this.D;
 value x has a volatile type; cannot override a member with non-volatile type
  val x: A with D = null
      ^
one error found
